WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42755
Web Inspector: Almost all inspector tests are failing if comma is used as decimal separator.
https://bugs.webkit.org/show_bug.cgi?id=42755
Summary
Web Inspector: Almost all inspector tests are failing if comma is used as dec...
Ilya Tikhonovsky
Reported
2010-07-21 08:10:22 PDT
%subj%
Attachments
[patch] initial version.
(1.15 KB, patch)
2010-07-21 08:18 PDT
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2010-07-21 08:11:28 PDT
Windows with Russian locale.
Ilya Tikhonovsky
Comment 2
2010-07-21 08:18:19 PDT
Created
attachment 62183
[details]
[patch] initial version.
Darin Adler
Comment 3
2010-07-21 08:19:36 PDT
Comment on
attachment 62183
[details]
[patch] initial version. This is a workaround, and not the real fix. The real fix is to change to a String formatting function that is locale independent.
Pavel Feldman
Comment 4
2010-07-21 08:23:34 PDT
(In reply to
comment #3
)
> (From update of
attachment 62183
[details]
) > This is a workaround, and not the real fix. The real fix is to change to a String formatting function that is locale independent.
It is not clear whether String formatting should be changed as a whole because of this use case. The code being fixed is supposed to produce strings compatible with JSON and it is JSON spec that requires numbers to have "." separators. Anyways, the fix is incomplete.
Pavel Feldman
Comment 5
2010-07-21 08:38:03 PDT
Comment on
attachment 62183
[details]
[patch] initial version. Ok, given that 0.5 will be formatted Ok we should land this.
Alexey Proskuryakov
Comment 6
2010-07-21 10:04:24 PDT
As Darin said, String formatting needs to be fixed - see also
bug 18994
. This is a rather poor workaround - it fixes Russian locale, but a locale can use almost arbitrary formatting for numbers. In particular, even proper Russian formatting "(123.456.789,00) will remain broken.
Dirk Schulze
Comment 7
2010-07-21 12:20:57 PDT
(In reply to
comment #6
)
> As Darin said, String formatting needs to be fixed - see also
bug 18994
. > > This is a rather poor workaround - it fixes Russian locale, but a locale can use almost arbitrary formatting for numbers. In particular, even proper Russian formatting "(123.456.789,00) will remain broken.
We should document all occurences of work arounds for the string formating problems. So we can fix them all at once. Otherwise, adding all this br's on
bug 18994
is also some kind of documentation.
Ilya Tikhonovsky
Comment 8
2010-07-21 12:28:11 PDT
(In reply to
comment #6
)
> As Darin said, String formatting needs to be fixed - see also
bug 18994
. > > This is a rather poor workaround - it fixes Russian locale, but a locale can use almost arbitrary formatting for numbers. In particular, even proper Russian formatting "(123.456.789,00) will remain broken.
According to spec %f doesn't uses thousands separator. It will be the problem if some locale uses something different as decimal separator.
Ilya Tikhonovsky
Comment 9
2010-08-10 22:45:30 PDT
already landed
Dirk Schulze
Comment 10
2010-08-10 23:37:24 PDT
(In reply to
comment #8
)
> (In reply to
comment #6
) > > As Darin said, String formatting needs to be fixed - see also
bug 18994
. > > > > This is a rather poor workaround - it fixes Russian locale, but a locale can use almost arbitrary formatting for numbers. In particular, even proper Russian formatting "(123.456.789,00) will remain broken. > > According to spec %f doesn't uses thousands separator. > It will be the problem if some locale uses something different as decimal separator.
I guess this is what ap tried to mention. :-P We have many localas with this schema (points and commas in a float). This fix is a hack, that works for some locals, but many still fail, or will fail now. It's sad that there was no FIXME added in the patch. Normaly this patch shouldn't be in trunk. :-(
Ilya Tikhonovsky
Comment 11
2010-08-11 00:11:13 PDT
yep. it should be fixed another way.
https://bugs.webkit.org/show_bug.cgi?id=43832
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug