2010-07-21  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        WebInspector: Serialization to JSON in InspectorValue works incorrect
        if comma is assigned as decimal separator. Windows with Russian locale.
        https://bugs.webkit.org/show_bug.cgi?id=42755

        * inspector/InspectorValues.cpp:
        (WebCore::InspectorBasicValue::writeJSON):



Canonical link: https://commits.webkit.org/54659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63822 268f45cc-cd09-0410-ab3c-d52691b4dbfc